<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.tlv8</groupId>
	<artifactId>tlv8-root</artifactId>
	<version>2.4.4</version>
	<packaging>pom</packaging>

	<name>tlv8-root</name>
	<url>http://www.tlv8.com</url>
	<description>TLv8 平台</description>

	<properties>
		<tlv8.version>2.4.4</tlv8.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<java.version>11</java.version>
		<maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
		<log4j.version>1.2.17</log4j.version>
		<dom4j.version>2.1.1</dom4j.version>
		<mybatis.version>3.5.6</mybatis.version>
		<fastjson.version>1.2.83</fastjson.version>
		<spring.version>5.3.24</spring.version>
		<servlet.version>4.0.1</servlet.version>
		<commons.io.version>2.11.0</commons.io.version>
		<commons.fileupload.version>1.4</commons.fileupload.version>
		<commons.collections.version>3.2.2</commons.collections.version>
		<commons.httpclient.version>3.1</commons.httpclient.version>
		<commons.beanutils.version>1.8.3</commons.beanutils.version>
		<commons.codec.version>1.11</commons.codec.version>
		<commons.lang.version>2.5</commons.lang.version>
		<commons.lang3.version>3.4</commons.lang3.version>
		<velocity.version>1.7</velocity.version>
		<poi.version>3.16</poi.version>
		<pdfbox.version>2.0.24</pdfbox.version>
		<jcifs.version>1.3.17</jcifs.version>
		<jxl.version>2.6.12</jxl.version>
		<oshi.version>6.1.2</oshi.version>
		<zxing.version>3.0.0</zxing.version>
		<codehaus.version>1.9.1</codehaus.version>
		<antlr.version>4.5.3</antlr.version>
		<lucene.version>3.6.0</lucene.version>
	</properties>

	<!-- 依赖声明 -->
	<dependencyManagement>
		<dependencies>

			<!-- spring -->
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-core</artifactId>
				<version>${spring.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-beans</artifactId>
				<version>${spring.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-context</artifactId>
				<version>${spring.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-tx</artifactId>
				<version>${spring.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-web</artifactId>
				<version>${spring.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-webmvc</artifactId>
				<version>${spring.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-jdbc</artifactId>
				<version>${spring.version}</version>
			</dependency>

			<!-- servlet包 -->
			<dependency>
				<groupId>javax.servlet</groupId>
				<artifactId>javax.servlet-api</artifactId>
				<version>${servlet.version}</version>
			</dependency>

			<!-- io常用工具类 -->
			<dependency>
				<groupId>commons-io</groupId>
				<artifactId>commons-io</artifactId>
				<version>${commons.io.version}</version>
			</dependency>

			<!-- httpclinet -->
			<dependency>
				<groupId>commons-httpclient</groupId>
				<artifactId>commons-httpclient</artifactId>
				<version>${commons.httpclient.version}</version>
			</dependency>

			<!-- collections工具类 -->
			<dependency>
				<groupId>commons-collections</groupId>
				<artifactId>commons-collections</artifactId>
				<version>${commons.collections.version}</version>
			</dependency>

			<!-- beanutils工具类 -->
			<dependency>
				<groupId>commons-beanutils</groupId>
				<artifactId>commons-beanutils</artifactId>
				<version>${commons.beanutils.version}</version>
			</dependency>
			<dependency>
				<groupId>commons-beanutils</groupId>
				<artifactId>commons-beanutils-core</artifactId>
				<version>${commons.beanutils.version}</version>
			</dependency>

			<!-- 文件上传工具类 -->
			<dependency>
				<groupId>commons-fileupload</groupId>
				<artifactId>commons-fileupload</artifactId>
				<version>${commons.fileupload.version}</version>
			</dependency>

			<!-- codec -->
			<dependency>
				<groupId>commons-codec</groupId>
				<artifactId>commons-codec</artifactId>
				<version>${commons.codec.version}</version>
			</dependency>

			<!-- lang -->
			<dependency>
				<groupId>commons-lang</groupId>
				<artifactId>commons-lang</artifactId>
				<version>${commons.lang.version}</version>
			</dependency>

			<!-- long3 -->
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-lang3</artifactId>
				<version>${commons.lang3.version}</version>
			</dependency>

			<dependency>
				<groupId>com.itextpdf</groupId>
				<artifactId>itextpdf</artifactId>
				<version>5.5.13</version>
			</dependency>

			<!-- jxl excel工具 -->
			<dependency>
				<groupId>net.sourceforge.jexcelapi</groupId>
				<artifactId>jxl</artifactId>
				<version>${jxl.version}</version>
			</dependency>

			<!-- excel工具 -->
			<dependency>
				<groupId>org.apache.poi</groupId>
				<artifactId>poi-ooxml</artifactId>
				<version>${poi.version}</version>
			</dependency>

			<!-- ppt/pptx文件读取 -->
			<dependency>
				<groupId>org.apache.poi</groupId>
				<artifactId>poi-scratchpad</artifactId>
				<version>${poi.version}</version>
			</dependency>

			<!-- pdfbox 读取pdf文件内容 -->
			<dependency>
				<groupId>org.apache.pdfbox</groupId>
				<artifactId>pdfbox</artifactId>
				<version>${pdfbox.version}</version>
			</dependency>

			<dependency>
				<groupId>org.apache.poi</groupId>
				<artifactId>ooxml-schemas</artifactId>
				<version>1.3</version>
			</dependency>
			
			<!-- commons-collections4 -->
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-collections4</artifactId>
				<version>4.4</version>
			</dependency>

			<!-- 共享文件 -->
			<dependency>
				<groupId>jcifs</groupId>
				<artifactId>jcifs</artifactId>
				<version>${jcifs.version}</version>
			</dependency>

			<!-- Log4j -->
			<dependency>
				<groupId>log4j</groupId>
				<artifactId>log4j</artifactId>
				<version>${log4j.version}</version>
			</dependency>

			<!-- Dom4j xml解析 -->
			<dependency>
				<groupId>org.dom4j</groupId>
				<artifactId>dom4j</artifactId>
				<version>${dom4j.version}</version>
			</dependency>

			<!-- mybatis 包 -->
			<dependency>
				<groupId>org.mybatis</groupId>
				<artifactId>mybatis</artifactId>
				<version>${mybatis.version}</version>
			</dependency>

			<!-- 阿里JSON解析器 -->
			<dependency>
				<groupId>com.alibaba</groupId>
				<artifactId>fastjson</artifactId>
				<version>${fastjson.version}</version>
			</dependency>

			<!-- 获取系统信息 -->
			<dependency>
				<groupId>com.github.oshi</groupId>
				<artifactId>oshi-core</artifactId>
				<version>${oshi.version}</version>
			</dependency>

			<!-- 谷歌zxing二维码工具包 -->
			<dependency>
				<groupId>com.google.zxing</groupId>
				<artifactId>core</artifactId>
				<version>${zxing.version}</version>
			</dependency>
			<dependency>
				<groupId>com.google.zxing</groupId>
				<artifactId>javase</artifactId>
				<version>${zxing.version}</version>
			</dependency>

			<!-- velocity代码生成使用模板 -->
			<dependency>
				<groupId>org.apache.velocity</groupId>
				<artifactId>velocity</artifactId>
				<version>${velocity.version}</version>
			</dependency>

			<!-- codehaus jackson -->
			<dependency>
				<groupId>org.codehaus.jackson</groupId>
				<artifactId>jackson-mapper-asl</artifactId>
				<version>${codehaus.version}</version>
			</dependency>

			<!--antlr-->
			<dependency>
				<groupId>org.antlr</groupId>
				<artifactId>antlr4-runtime</artifactId>
				<version>${antlr.version}</version>
			</dependency>

			<!--Lucene 核心包 -->
			<dependency>
				<groupId>org.apache.lucene</groupId>
				<artifactId>lucene-core</artifactId>
				<version>${lucene.version}</version>
			</dependency>
			<!--对分词索引查询解析 -->
			<dependency>
				<groupId>org.apache.lucene</groupId>
				<artifactId>lucene-queryparser</artifactId>
				<version>${lucene.version}</version>
			</dependency>
			<!--检索关键字高亮显示 -->
			<dependency>
				<groupId>org.apache.lucene</groupId>
				<artifactId>lucene-highlighter</artifactId>
				<version>${lucene.version}</version>
			</dependency>

			<!-- 国标加密 -->
			<dependency>
			    <groupId>org.bouncycastle</groupId>
			    <artifactId>bcprov-jdk15on</artifactId>
			    <version>1.69</version>
			</dependency>

			<!-- 基础包 -->
			<dependency>
				<groupId>com.tlv8</groupId>
				<artifactId>tlv8.base</artifactId>
				<version>${tlv8.version}</version>
			</dependency>

			<!-- 核心包 -->
			<dependency>
				<groupId>com.tlv8</groupId>
				<artifactId>tlv8.core</artifactId>
				<version>${tlv8.version}</version>
			</dependency>

			<!-- 系统模块 -->
			<dependency>
				<groupId>com.tlv8</groupId>
				<artifactId>tlv8.system</artifactId>
				<version>${tlv8.version}</version>
			</dependency>

			<!-- 流程引擎 -->
			<dependency>
				<groupId>com.tlv8</groupId>
				<artifactId>tlv8.flw</artifactId>
				<version>${tlv8.version}</version>
			</dependency>

			<!-- 服务器监控 -->
			<dependency>
				<groupId>com.tlv8</groupId>
				<artifactId>tlv8.monitor</artifactId>
				<version>${tlv8.version}</version>
			</dependency>

			<!-- 报表模块 -->
			<dependency>
				<groupId>com.tlv8</groupId>
				<artifactId>tlv8.ureport</artifactId>
				<version>${tlv8.version}</version>
			</dependency>

			<!-- 文档服务客户端 -->
			<dependency>
				<groupId>com.tlv8</groupId>
				<artifactId>tlv8.doc.client</artifactId>
				<version>${tlv8.version}</version>
			</dependency>

		</dependencies>
	</dependencyManagement>

	<modules>
		<module>tlv8.base</module>
		<module>tlv8.core</module>
		<module>tlv8.system</module>
		<module>tlv8.flw</module>
		<module>tlv8.monitor</module>
		<module>tlv8.ureport</module>
		<module>tlv8.doc.client</module>
		<module>tlv8</module>
		<module>DocServer</module>
	</modules>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.1</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
					<encoding>${project.build.sourceEncoding}</encoding>
				</configuration>
			</plugin>
			<plugin>
	            <groupId>org.apache.maven.plugins</groupId>
	            <artifactId>maven-war-plugin</artifactId>
	            <version>3.2.2</version>
	        </plugin>
		</plugins>
	</build>

	<repositories>
		<repository>
			<id>public</id>
			<name>aliyun nexus</name>
			<url>https://maven.aliyun.com/repository/public</url>
			<releases>
				<enabled>true</enabled>
			</releases>
		</repository>
	</repositories>

	<pluginRepositories>
		<pluginRepository>
			<id>public</id>
			<name>aliyun nexus</name>
			<url>https://maven.aliyun.com/repository/public</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</pluginRepository>
	</pluginRepositories>

</project>